* Add support for source files with different file extensions to
	package-inferred-systems.  Thanks to Jingtao Xu for identifying
	the bug and providing a fix.
* Fixes for UIOP:WITH-TEMPORARY-FILE
* Miscellaneous bug fixes from Luís Oliveira, Gary Palter, François-René
	Rideau, and Eric Schulte.
* Fix for argument handling in LAUNCH-PROGRAM.
* Fixes for feature handling from Eric Timmons.

cl-asdf (2:3.3.4-1) unstable; urgency=low
Bug fix release:
* SBCL compatibility: support local nicknames in package-inferred-system,
	address upgrade issues in SBCL 2.x (thanks to Eric Timmons).
* Clasp compatibility: fixes from Karsten Poeck.
* Lispworks compatibility: fixes from Martin Simmons.
* Documentation: multiple user-contributed fixes: Jan Moringen and
	Rommel Martinez.
* Bundle bug fixes: thanks to Guillaume Le Vaillant and François-René Rideau.
* Miscellaneous bug fixes.
* Tests: miscellaneous fixes and improvements.

-- Robert P. Goldman <rpgoldman@sift.net> Thu, 13 Feb 2020 17:09:39 -0600

cl-asdf (2:3.3.3-1) unstable; urgency=low

  Bug fix release:
  * Dependency tracking: fix bugs in handling misnamed secondary systems.
    We now distinguish between "syntactic" and "semantic" primariness,
    properly warn in case a secondary system is misnamed, yet properly
    recompile or avoid spurious recompilation depending on whether
    there or not is a conflict or redefinition.
    Similarly handle package-inferred-system (thanks to Eric Timmons).
    Better warning in a fishy case of compute-action-stamp.
  * UIOP: Fix loading, allow the user to specify UIOP location from which
	to load.
  * SBCL compatibility: Fix issue with deferred warnings on SBCL.
  * Allegro compatibility: Fix issue detecting "modern" lisp.
  * Genera compatibility: Fix minor issues.  Not fully tested.
  * ECL compatibility: Bundling fixes.
  * Fiveam-ASDF: Added to contrib/ example system for integrating FiveAM
    tests with ASDF's test-op.